<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ContainerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_profile"
        style="@style/ContainerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:drawableEnd="@drawable/ic_next"
        android:padding="@dimen/_16sdp"
        android:text="@string/new_product"
        android:textSize="@dimen/_12sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:drawableEnd="@drawable/ic_next"
        android:padding="@dimen/_16sdp"
        android:text="@string/address"
        android:textSize="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_account_manager"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:drawableEnd="@drawable/ic_next"
        android:padding="@dimen/_16sdp"
        android:text="@string/my_account"
        android:textSize="@dimen/_10sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_feedback"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:drawableEnd="@drawable/ic_next"
        android:padding="@dimen/_16sdp"
        android:text="@string/feedback"
        android:textSize="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_follow"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:drawableEnd="@drawable/ic_next"
        android:padding="@dimen/_16sdp"
        android:text="@string/follow"
        android:textSize="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_introduce"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:drawableEnd="@drawable/ic_next"
        android:padding="@dimen/_16sdp"
        android:text="@string/introduce"
        android:textSize="@dimen/_10sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_out"
        style="@style/ContainerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:textColor="@color/red"
        android:text="@string/sign_out" />

</androidx.appcompat.widget.LinearLayoutCompat>