<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.SignInFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroke_border_1_un_selected"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroke_border_1_un_selected"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_f_password"
            style="@style/HintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/f_password"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/ContainerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_border_14"
            android:backgroundTint="@color/black"
            android:padding="@dimen/_16sdp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        android:maxHeight="10dp"
        android:visibility="gone" />

</RelativeLayout>