<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ContainerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8sdp" />

    <RelativeLayout
        android:id="@+id/layout_update_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/bg_stroke_border_1_un_selected">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_update_nickname"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center_vertical"
            android:padding="@dimen/_16sdp"
            android:text="@string/nickname"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username"
            style="@style/HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_42sdp"
            android:textAlignment="viewEnd"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_update_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/bg_stroke_border_1_un_selected">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_update_email"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center_vertical"
            android:padding="@dimen/_16sdp"
            android:text="@string/email"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            style="@style/HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_42sdp"
            android:background="@color/background"
            android:textAlignment="viewEnd"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_update_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/bg_stroke_border_1_un_selected">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_update_phone_number"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center_vertical"
            android:padding="@dimen/_16sdp"
            android:text="@string/phone_number"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_phone_number"
            style="@style/HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_42sdp"
            android:background="@color/background"
            android:textAlignment="viewEnd"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_update_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/bg_stroke_border_1_un_selected">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_update_address"
            style="@style/DefaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center_vertical"
            android:padding="@dimen/_16sdp"
            android:text="@string/address"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_address"
            style="@style/HintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_42sdp"
            android:textAlignment="viewEnd"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_update_password"
        style="@style/DefaultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/bg_stroke_border_1_un_selected"
        android:drawableEnd="@drawable/ic_next"
        android:gravity="center_vertical"
        android:padding="@dimen/_16sdp"
        android:text="@string/s_password"
        android:textSize="@dimen/_10sdp" />

</androidx.appcompat.widget.LinearLayoutCompat>