<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_border_14">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ContainerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_16sdp"
            android:text="@string/write_review"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_product"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_8sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_product"
                android:layout_alignBottom="@+id/img_product"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_toEndOf="@+id/img_product"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/DefaultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/img_product"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/HintText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/img_product"
                    android:textSize="@dimen/_10sdp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_content_evaluate"
                style="@style/ContainerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_info"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/content_evaluate"
                android:textSize="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_content_evaluate"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:progressTint="@color/yellow"
                android:rating="5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_comment_title"
                style="@style/ContainerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingbar"
                android:layout_margin="@dimen/_8sdp"
                android:text="@string/comment"
                android:textSize="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_comment"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_comment_title"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_border_24"
                android:backgroundTint="@color/white"
                android:lines="6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sent"
                style="@style/ButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_comment"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/bg_border_24"
                android:text="@string/sent"
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>