<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragment.SignUpFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/img_search"
            android:layout_toEndOf="@+id/img_back"
            android:textColorHint="@color/gray_dark"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_24sdp"
            app:boxCornerRadiusBottomStart="@dimen/_24sdp"
            app:boxCornerRadiusTopEnd="@dimen/_24sdp"
            app:boxCornerRadiusTopStart="@dimen/_24sdp"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/red"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toStartOf="@+id/img_search"
            android:layout_toEndOf="@+id/img_back"
            android:textColorHint="@color/gray_dark"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_24sdp"
            app:boxCornerRadiusBottomStart="@dimen/_24sdp"
            app:boxCornerRadiusTopEnd="@dimen/_24sdp"
            app:boxCornerRadiusTopStart="@dimen/_24sdp"
            app:endIconMode="password_toggle"
            app:errorTextColor="@color/red"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_r_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_toStartOf="@+id/img_search"
            android:layout_toEndOf="@+id/img_back"
            android:textColorHint="@color/gray_dark"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_24sdp"
            app:boxCornerRadiusBottomStart="@dimen/_24sdp"
            app:boxCornerRadiusTopEnd="@dimen/_24sdp"
            app:boxCornerRadiusTopStart="@dimen/_24sdp"
            app:endIconMode="password_toggle"
            app:errorTextColor="@color/red"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_r_password"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/ContainerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_border_14"
            android:backgroundTint="@color/black"
            android:padding="@dimen/_8sdp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        android:maxHeight="10dp"
        android:visibility="gone" />

</RelativeLayout>